2006-04-07  Jan Hubicka  <jh@suse.cz>

	* ipa-inline.c (cgraph_early_inlining): Collect garbage.

2006-04-11  Mark Mitchell  <mark@codesourcery.com>

	PR target/26459
	* config/rs6000/e500-double.h (SUB3TARGET_OVERRIDE_OPTIONS): Test
	rs6000_explicit_options.float_gprs.

2006-04-10  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/install.texi (*-*-solaris2*): Point to the configure page.

2006-04-10  Jakub Jelinek  <jakub@redhat.com>

	PR debug/27057
	* dwarf2out.c (is_symbol_die): Return true also for namespaces.

2006-04-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/26508
	* config.gcc (hppa*64*-*-hpux11*): Add 'libgcc_stub.a' to extra_parts.
	* pa64-hpux.h (LIB_SPEC): Don't append milli.a.
	(LINK_GCC_C_SEQUENCE_SPEC): Define.  Append milli.a here.
	(PA_CXA_FINALIZE_STUB, PA_JV_REGISTERCLASSES_STUB): Delete defines.
	(PA_INIT_FINI_HACK): Rename to PA_CRTBEGIN_HACK.
	(PA_CRTBEGIN_HACK): Ensure __do_global_ctors_aux is placed in text
	section.  Delete PA_CXA_FINALIZE_STUB and PA_JV_REGISTERCLASSES_STUB
	stubs.  Add ".align 8" directives before all ".dword" directives.
	(GTHREAD_USE_WEAK): Revise comment.
	(TARGET_ATTRIBUTE_WEAK): Define.
	* pa/t-pa64 (LIBGCCSTUB_OBJS): Add new rules for stublib.c, rfi-stub.o,
	dfi-stub.o, cxaf-stub.o and jvrc-stub.o.
	* stublib.c: New file.

2006-04-09  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (Prerequisites): Refine some wording on
	bootstrapping and ksh.
	Move the version numbers of DejaGnu here from the testing section
	and fix casing of names.
	Fix markup and clarify wording for autogen requirements.
	Refer to GCJ instead of just java.
	Refer to SVN instead of CVS.
	Describe diffutils as useful instead of necessary.
	(Downloading the source): Refer to SVN instead of CVS.
	Adjust a link to our web site accordingly.
	(Configuration): Fix casing of Bison.
	(Specific): Avoid reference to CVS.
	(Building): Refer to SVN instead of CVS.  